# imgui-node-editor

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  NodeEditor.sln  Readme.md  TODO.md  appveyor.yml  crude_json.cpp  crude_json.h  imgui_bezier_math.h  imgui_bezier_math.inl  imgui_canvas.cpp  imgui_canvas.h  imgui_extra_math.h  imgui_extra_math.inl  imgui_node_editor.cpp  imgui_node_editor.h  imgui_node_editor_api.cpp  imgui_node_editor_internal.h  imgui_node_editor_internal.inl
.github/workflows/: build.yml
Editor/: Configuration.props  Editor.vcxproj  Editor.vcxproj.filters  ImGui.natvis
Editor/Application/: Drawing.cpp  Drawing.h  application.cpp  application.h  application_simple.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  main.cpp  widgets.cpp  widgets.h
Editor/Backend/: ImwPlatformWindowDX11.cpp  ImwPlatformWindowDX11.h  ImwWindowManagerDX11.cpp  ImwWindowManagerDX11.h  Win32MessageHelper.cpp  Win32MessageHelper.h  imgui_impl_dx11.cpp
Editor/Editor/: Builders.cpp  Builders.h  Drawing.cpp  Drawing.h  Editor.cpp  Editor.h  EditorApi.cpp  EditorApi.h  ImGuiInterop.h  NodeEditor.cpp  NodeEditor.h  NodeEditorDraw.cpp  NodeEditorInternal.h  NodeEditorLayout.cpp  NodeEditorNode.cpp  NodeEditorWidgets.cpp  NodeWindow.cpp  NodeWindow.h  Types.h  Types.inl  Widgets.cpp  Widgets.h  Window.cpp  Window.h  main.cpp  node_editor.cpp  node_editor.h  types.h  types.inl
Editor/Editor/Common/: ImGuiInterop.h  Math.h  Math.inl  Types.h
Editor/Editor/NodeEditor/: NodeEditor.cpp  NodeEditorImpl.cpp  NodeEditorImpl.h
Editor/Editor/Utilities/: Builders.cpp  Builders.h  (+2 more)
Editor/ImGui/: imconfig.h  imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_internal.h  stb_truetype.h
Editor/ImWindow/: ImwConfig.h  ImwContainer.cpp  ImwContainer.h  ImwMenu.cpp  ImwMenu.h  ImwPlatformWindow.cpp  ImwPlatformWindow.h  ImwStatusBar.cpp  ImwStatusBar.h  ImwToolBar.cpp  ImwToolBar.h  ImwWindow.cpp  ImwWindow.h  ImwWindowManager.cpp  ImwWindowManager.h
Examples/: CMakeLists.txt
Examples/00-Simple/: CMakeLists.txt  Simple.cpp
Examples/01-Blueprints/: Blueprints.cpp  CMakeLists.txt
Examples/BasicInteraction/: BasicInteraction.cpp  CMakeLists.txt
Examples/Blueprints/: Blueprints.cpp  CMakeLists.txt
Examples/Blueprints/Utilities/: Builders.cpp  Builders.h  Drawing.cpp  Widgets.cpp  Widgets.h
Examples/Canvas/: CMakeLists.txt  Canvas.cpp
Examples/Common/Application/: CMakeLists.txt
Examples/Common/Application/Include/: Application.h
Examples/Common/Application/Source/DX11/: Entry.cpp  imgui_impl_dx11.cpp  imgui_impl_dx11.h  imgui_impl_win32.cpp
Examples/Common/Application/Source/GLFW/: Entry.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw_gl3.cpp
Examples/Common/BlueprintUtilities/: CMakeLists.txt
Examples/Common/BlueprintUtilities/Include/ax/: Builders.h  Math2D.h  Math2D.inl
Examples/Common/BlueprintUtilities/Source/: Interop.h
Examples/Common/BlueprintUtilities/Source/ax/: Builders.cpp  Drawing.cpp
Examples/Common/Shared/: CMakeLists.txt
Examples/Common/Shared/Include/: Builders.h  Drawing.h  ScopeGuard.h  Widgets.h
Examples/Common/Shared/Source/: Builders.cpp  Drawing.cpp  Widgets.cpp
Examples/Common/Support/: Icon.icns  Resource.rc.in
Examples/Simple/: CMakeLists.txt  Simple.cpp
Examples/Widgets/: CMakeLists.txt  Widgets.cpp
NodeEditor/: CMakeLists.txt
NodeEditor/Include/: NodeEditor.h  imgui_node_editor.h
NodeEditor/Include/ax/: Builders.h
NodeEditor/Source/: Editor.cpp  Editor.h  NodeEditor.cpp  crude_json.cpp  crude_json.h  imgui_bezier_math.inl  imgui_canvas.cpp  imgui_node_editor.cpp  imgui_node_editor_api.cpp  imgui_node_editor_internal.h
NodeEditor/Source/Shared/: Interop.h  Math2D.h  Math2D.inl
NodeEditor/Source/ax/: Widgets.cpp
Support/: ImGui.natvis
Support/CMakeModules/: FindScopeGuard.cmake  Findblueprint-utilities.cmake  Findgl3w.cmake  Findimgui.cmake  Findimgui_node_editor.cmake  Findpicojson.cmake  Findstb_image.cmake
backends/: CMakeLists.txt  imgui_extra_keys.h  imgui_impl_dx11.cpp
docs/: CHANGELOG.txt  README.md
examples/: CMakeLists.txt
examples/application/: CMakeLists.txt
examples/application/include/: application.h
examples/application/source/: application.cpp  config.h.in  entry_point.cpp  imgui_extra_keys.h  imgui_impl_dx11.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_win32.cpp  platform.h  platform_glfw.cpp  platform_win32.cpp  renderer.h  renderer_dx11.cpp  renderer_ogl3.cpp  setup.h
examples/application/source/dx11/: entry.cpp  imgui_impl_win32.cpp
examples/application/source/glfw/: entry.cpp  imgui_impl_glfw_gl3.cpp
examples/basic-interaction-example/: CMakeLists.txt  basic-interaction-example.cpp
examples/blueprints-example/: CMakeLists.txt  blueprints-example.cpp
examples/blueprints-example/utilities/: builders.cpp  drawing.cpp  drawing.h  widgets.cpp  widgets.h
examples/blueprints2-example/: CMakeLists.txt  blueprint_editor_document.cpp  blueprint_editor_document.h  blueprint_editor_icons.cpp  blueprint_editor_icons.h  blueprint_editor_utilities.cpp  blueprint_editor_utilities.h  blueprints2-example.cpp  crude_blueprint.cpp  crude_blueprint.h  crude_blueprint_library.cpp  crude_blueprint_library.h  crude_blueprint_utilities.cpp  crude_blueprint_utilities.h  crude_layout.cpp  crude_layout.h  crude_logger.cpp  crude_logger.h  imgui_blueprint_utilities.cpp  imgui_blueprint_utilities.h  imgui_extras.cpp  imgui_extras.h
examples/blueprints2-example/misc/: crude_blueprint.natvis  nonstd.natvis
examples/blueprints2-example/utilities/: drawing.cpp  widgets.cpp
examples/canvas-example/: CMakeLists.txt  canvas-example.cpp
examples/data/: Cuprum-OFL.txt
examples/idtypes-example/: CMakeLists.txt  edconfig.h  idtypes-example.cpp
examples/simple-example/: CMakeLists.txt  simple-example.cpp
examples/widgets-example/: CMakeLists.txt  widgets-example.cpp
misc/: imgui_node_editor.natvis
misc/cmake-modules/: FindScopeGuard.cmake  Findgl3w.cmake  Findimgui.cmake  Findimgui_backends.cmake  Findimgui_node_editor.cmake  Findstb_image.cmake
